--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/15/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">60.0&#176;F</td>
+        <td class="data">59.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.3&#176;F</td>
+        <td class="data">44.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,7 +70,7 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.013 inHg (0.043)</td>
+        <td class="data">30.009 inHg (0.041)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">76.8&#176;F</td>
+        <td class="data">76.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -110,11 +110,11 @@
       <table class="celestial">
         <tr>
           <td class="label">Sunrise</td>
-          <td class="data">06:44:06 AM</td>
+          <td class="data">06:44:51 AM</td>
         </tr>
         <tr>
           <td class="label">Sunset</td>
-          <td class="data">07:13:12 PM</td>
+          <td class="data">07:11:45 PM</td>
         </tr>
         <tr>
           <td class="label">Moon Phase</td>
@@ -153,10 +153,10 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="01:23:25 PM">
-            92.9</span><br/>
-          <span title="07:19:55 AM">
-            49.2</span>
+          <span title="12:00:01 AM">
+            59.9</span><br/>
+          <span title="12:01:50 AM">
+            59.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)">
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="01:23:25 PM" class="hival">
-            92.9</span>
+          <span title="12:00:01 AM" class="hival">
+            59.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)" class="hival">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="07:19:55 AM" class="loval">
-            49.2</span>
+          <span title="12:01:50 AM" class="loval">
+            59.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:29:11 AM (Sunday)" class="loval">
@@ -235,10 +235,10 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="11:14:17 AM">
-            52.9</span><br/>
-          <span title="02:03:36 PM">
-            31.5</span>
+          <span title="12:00:01 AM">
+            44.6</span><br/>
+          <span title="12:03:12 AM">
+            44.1</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:14:17 AM (Monday)">
@@ -269,10 +269,10 @@
       <tr>
         <td class="label">Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="07:40:53 AM">
-            95</span><br/>
-          <span title="02:03:34 PM">
-            12</span>
+          <span title="12:00:01 AM">
+            57</span><br/>
+          <span title="12:03:10 AM">
+            56</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:40:53 AM (Monday)">
@@ -303,10 +303,10 @@
       <tr>
         <td class="label">Barometer</td>
         <td class="data new_row hilo_day">
-          <span title="11:57:03 PM">
+          <span title="12:01:00 AM">
             30.014</span><br/>
-          <span title="03:24:02 PM">
-            29.898</span>
+          <span title="12:03:00 AM">
+            30.009</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="11:57:03 PM (Monday)">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="04:43:42 PM">
-            23</span><br/>
-          166
+          <span title="12:00:01 AM">
+            0</span><br/>
+             N/A
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -407,7 +407,7 @@
       <tr>
         <td class="label">Wind Average</td>
         <td class="data new_row hilo_day">
-          3</td>
+          0</td>
         <td class="data new_row hilo_week">
           2</td>
         <td class="data new_row hilo_month">
@@ -421,7 +421,7 @@
       <tr>
         <td class="label">Wind RMS</td>
         <td class="data new_row hilo_day">
-          4</td>
+          0</td>
         <td class="data new_row hilo_week">
           4</td>
         <td class="data new_row hilo_month">
@@ -439,8 +439,8 @@
           Average Direction
         </td>
         <td class="data new_row hilo_day">
-          2<br/>
-          198
+          0<br/>
+             N/A
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -470,10 +470,10 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="06:22:02 PM">
-            81.8</span><br/>
-          <span title="07:44:01 AM">
-            73.0</span>
+          <span title="12:00:01 AM">
+            76.8</span><br/>
+          <span title="12:02:00 AM">
+            76.7</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:22:02 PM (Monday)">
@@ -505,10 +505,10 @@
       <tr>
         <td class="label">Inside Humidity</td>
         <td class="data new_row hilo_day">
-          <span title="06:53:01 AM">
-            41</span><br/>
-          <span title="04:22:02 PM">
-            31</span>
+          <span title="12:00:01 AM">
+            36</span><br/>
+          <span title="12:00:01 AM">
+            36</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:53:01 AM (Monday)">
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 9 hours, 12 minutes</td>
+      <td class="data">13 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 9 hours, 12 minutes</td>
+      <td class="data">13 days, 9 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
