--- a/statistics.html
+++ b/statistics.html
@@ -36,7 +36,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/14/2020 11:59:00 PM</p>
+    <p class="lastupdate">09/15/2020 12:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -84,10 +84,10 @@
         <tr>
           <td class="label">Outside Temperature</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">92.9<br/>
-            <span class="timestamp">01:23:25 PM</span><br/>
-            49.2<br/>
-            <span class="timestamp">07:19:55 AM</span>
+          <td class="data new_row">59.9<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            59.8<br/>
+            <span class="timestamp">12:01:50 AM</span>
           </td>
           <td class="data new_row">92.9<br/>
             <span class="timestamp">01:23:25 PM (Monday)</span><br/>
@@ -113,8 +113,8 @@
         <tr>
           <td class="label">Heat Index</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">92.9<br/>
-            <span class="timestamp">01:23:25 PM</span>
+          <td class="data new_row">59.9<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">92.9<br/>
             <span class="timestamp">01:23:25 PM (Monday)</span>
@@ -132,8 +132,8 @@
         <tr>
           <td class="label">Wind Chill</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">49.2<br/>
-            <span class="timestamp">07:19:55 AM</span>
+          <td class="data new_row">59.8<br/>
+            <span class="timestamp">12:01:50 AM</span>
           </td>
           <td class="data new_row">48.7<br/>
             <span class="timestamp">07:29:11 AM (Sunday)</span>
@@ -151,10 +151,10 @@
         <tr>
           <td class="label">Dew Point</td>
           <td class="units">&#176;F</td>
-          <td class="data new_row">52.9<br/>
-            <span class="timestamp">11:14:17 AM</span><br/>
-            31.5<br/>
-            <span class="timestamp">02:03:36 PM</span>
+          <td class="data new_row">44.6<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            44.1<br/>
+            <span class="timestamp">12:03:12 AM</span>
           </td>
           <td class="data new_row">52.9<br/>
             <span class="timestamp">11:14:17 AM (Monday)</span><br/>
@@ -180,10 +180,10 @@
         <tr>
           <td class="label">Humidity</td>
           <td class="units">%</td>
-          <td class="data new_row">95<br/>
-            <span class="timestamp">07:40:53 AM</span><br/>
-            12<br/>
-            <span class="timestamp">02:03:34 PM</span>
+          <td class="data new_row">57<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            56<br/>
+            <span class="timestamp">12:03:10 AM</span>
           </td>
           <td class="data new_row">95<br/>
             <span class="timestamp">07:40:53 AM (Monday)</span><br/>
@@ -210,9 +210,9 @@
           <td class="label">Barometer</td>
           <td class="units"> inHg</td>
           <td class="data new_row">30.014<br/>
-            <span class="timestamp">11:57:03 PM</span><br/>
-            29.898<br/>
-            <span class="timestamp">03:24:02 PM</span>
+            <span class="timestamp">12:01:00 AM</span><br/>
+            30.009<br/>
+            <span class="timestamp">12:03:00 AM</span>
           </td>
           <td class="data new_row">30.014<br/>
             <span class="timestamp">11:57:03 PM (Monday)</span><br/>
@@ -275,9 +275,9 @@
             &#176;
           </td>
           <td class="data new_row">
-            23<br/>
-            166<br/>
-            <span class="timestamp">04:43:42 PM</span>
+            0<br/>
+               N/A<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             23<br/>
@@ -304,7 +304,7 @@
           <td class="label">Wind Average</td>
           <td class="units"> mph</td>
           <td class="data new_row">
-            3</td>
+            0</td>
           <td class="data new_row">
             2</td>
           <td class="data new_row">
@@ -317,7 +317,7 @@
         <tr>
           <td class="label">Wind RMS</td>
           <td class="units"> mph</td>
-          <td class="data new_row">4</td>
+          <td class="data new_row">0</td>
           <td class="data new_row">4</td>
           <td class="data new_row">3</td>
           <td class="data new_row">6</td>
@@ -334,8 +334,8 @@
             &#176;
           </td>
           <td class="data new_row">
-            2<br/>
-            198
+            0<br/>
+               N/A
           </td>
           <td class="data new_row">
             2<br/>
@@ -361,10 +361,10 @@
           <td class="label">Inside Temperature</td>
           <td class="units">&#176;F</td>
           <td class="data new_row">
-            81.8<br/>
-            <span class="timestamp">06:22:02 PM</span><br/>
-            73.0<br/>
-            <span class="timestamp">07:44:01 AM</span>
+            76.8<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            76.7<br/>
+            <span class="timestamp">12:02:00 AM</span>
           </td>
           <td class="data new_row">
             81.8<br/>
@@ -396,10 +396,10 @@
           <td class="label">Inside Humidity</td>
           <td class="units">%</td>
           <td class="data new_row">
-            41<br/>
-            <span class="timestamp">06:53:01 AM</span><br/>
-            31<br/>
-            <span class="timestamp">04:22:02 PM</span>
+            36<br/>
+            <span class="timestamp">12:00:01 AM</span><br/>
+            36<br/>
+            <span class="timestamp">12:00:01 AM</span>
           </td>
           <td class="data new_row">
             41<br/>
