--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 02:04:00 AM</p>
+    <p class="lastupdate">09/15/2020 02:09:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">56.1&#176;F</td>
+        <td class="data">55.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">56.1&#176;F</td>
+        <td class="data">55.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">56.1&#176;F</td>
+        <td class="data">55.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">44.9&#176;F</td>
+        <td class="data">44.3&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">66%</td>
+        <td class="data">65%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.027 inHg (0.023)</td>
+        <td class="data">30.026 inHg (0.025)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph NW (315&#176;)</td>
+        <td class="data">1 mph WNW (292&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -119,7 +119,7 @@
         <tr>
           <td class="label">Moon Phase</td>
           <td class="data">Waning crescent<br/>
-            6%</td>
+            5%</td>
         </tr>
       </table>
     </div>
@@ -155,8 +155,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             59.9</span><br/>
-          <span title="02:03:18 AM">
-            56.0</span>
+          <span title="02:08:56 AM">
+            55.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="01:23:25 PM (Monday)">
@@ -211,8 +211,8 @@
       <tr>
         <td class="label">Wind Chill</td>
         <td class="data new_row hilo_day">
-          <span title="02:03:18 AM" class="loval">
-            56.0</span>
+          <span title="02:08:56 AM" class="loval">
+            55.9</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="07:29:11 AM (Sunday)" class="loval">
@@ -375,9 +375,9 @@
       <tr>
         <td class="label">Wind Max</td>
         <td class="data new_row hilo_day">
-          <span title="01:56:34 AM">
-            1</span><br/>
-          5
+          <span title="02:06:10 AM">
+            2</span><br/>
+          317
         </td>
         <td class="data new_row hilo_week">
           <span title="04:43:42 PM (Monday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          315
+          313
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             76.8</span><br/>
-          <span title="01:53:00 AM">
-            75.9</span>
+          <span title="02:07:00 AM">
+            75.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:22:02 PM (Monday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 11 hours, 17 minutes</td>
+      <td class="data">13 days, 11 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 11 hours, 17 minutes</td>
+      <td class="data">13 days, 11 hours, 22 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
