--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/15/2020 03:09:00 AM</p>
+    <p class="lastupdate">09/15/2020 03:14:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">54.1&#176;F</td>
+        <td class="data">54.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">54.1&#176;F</td>
+        <td class="data">54.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">54.1&#176;F</td>
+        <td class="data">54.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">43.8&#176;F</td>
+        <td class="data">43.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">30.021 inHg (0.008)</td>
+        <td class="data">30.019 inHg (0.007)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph WNW (292&#176;)</td>
+        <td class="data">0 mph N/A (   N/A)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           0<br/>
-          306
+          305
         </td>
         <td class="data new_row hilo_week">
           2<br/>
@@ -472,8 +472,8 @@
         <td class="data new_row hilo_day">
           <span title="12:00:01 AM">
             76.8</span><br/>
-          <span title="03:02:00 AM">
-            75.4</span>
+          <span title="03:11:00 AM">
+            75.3</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:22:02 PM (Monday)">
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">13 days, 12 hours, 22 minutes</td>
+      <td class="data">13 days, 12 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">13 days, 12 hours, 22 minutes</td>
+      <td class="data">13 days, 12 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
